tests/lexer/invalid/test_multiple_errors.src
@invalid
$symbol
#comment
123.456.789
"unterminated
/* unclosed
